--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
   "description": "",
   "dependencies": {
     "clsx": "^2.1.1",
+    "standard": "^17.1.2",
     "tailwind-merge": "^3.0.1"
+  },
+  "devDependencies": {
+    "globals": "16.0.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
+
 }
