--- a/projects/triqui/package.json
+++ b/projects/triqui/package.json
@@ -33,5 +33,8 @@
     "globals": "^15.15.0",
     "standard": "^17.1.2",
     "vite": "^6.2.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
